# nwn2dev-public

./: .gitignore  CMakeLists.txt  version.cpp
NWNScriptCompilerLib/: NscParser.ypp
NWNUtilLib/: NWNUtilLib.vcxproj
_NscLib/: CMakeLists.txt  Nsc.h  NscCompat.h  NscCompiler.cpp  NscContext.cpp  NscContext.h  NscPStackEntry.h  NscParser.ypp  Precomp.h
_NwnBaseLib/: BaseTypes.h
_NwnDataLib/: BifFileReader.cpp  BifFileReader.h  CMakeLists.txt  FileWrapper.h  GffFileReader.cpp  GffFileReader.h  KeyFileReader.cpp  KeyFileReader.h  NWScriptReader.cpp  Precomp.h  ResourceAccessor.h  ResourceManager.cpp  ResourceManager.h
_NwnScriptLib/: CMakeLists.txt  NWScriptInterfaces.h  NWScriptStack.cpp  NWScriptStack.h
_NwnUtilLib/: BufferParser.h  CMakeLists.txt  OsCompat.cpp  OsCompat.h  Precomp.h  Ref.h  version.cpp
nwnnss/: CMakeLists.txt  nwnnss  nwnnss.cpp
nwnsc/: .gitignore  CMakeLists.txt  nwnsc.cpp
nwnsc/nwnsc.dSYM/Contents/: Info.plist
